[package]
name = "webtk-app"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Cli
clap = { version = "4", features = ["derive"] }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
