[package]
name = "webtk"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Cli
clap = { version = "4", features = ["derive"] }
# -- File system
simple-fs = "0.9.0"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
