[package]
name = "webtk"
version = "0.1.1-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Web asset toolkit utility to transpile, generate, and mix web assets."
homepage = "https://github.com/jeremychone/rust-webtk"
repository = "https://github.com/jeremychone/rust-webtk"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Cli
clap = { version = "4", features = ["derive"] }
# -- File system
simple-fs = "0.9.0"
globset = "0.4"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- XML
xmltree = "0.12.0"
# -- Others
derive_more = { version = "2", features = ["from", "display"] }
